overlays/webrobot/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postiz
spec:
  template:
    spec:
      containers:
        - name: postiz
