overlays/webrobot/patch-temporal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal
spec:
  template:
    spec:
      containers:
        - name: temporal
